[package]
name = "libafl-fandango-pyo3"
version = "0.1.1"
authors = ["Valentin Huber <contact@valentinhuber.com>"]
license = "MIT"
repository = "https://github.com/riesentoaster/libafl-fandango-pyo3"
description = "A library for running Fandango as in LibAFL using PyO3"
edition = "2024"
readme = "README.md"

[[example]]
name = "run_fandango"
path = "examples/run_fandango.rs"

[[example]]
name = "baby_fuzzer_generator"
path = "examples/baby_fuzzer_generator.rs"

[[example]]
name = "baby_fuzzer_differential"
path = "examples/baby_fuzzer_differential.rs"

[[example]]
name = "baby_fuzzer_mutator"
path = "examples/baby_fuzzer_mutator.rs"

[dev-dependencies]
clap = { version = "4.5.43", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"

[dependencies]
libafl = "0.15.3"
libafl_bolts = "0.15.3"
pyo3 = { version = "0.25.1", features = ["auto-initialize"] }
serde = { version = "1.0.219", features = ["derive"] }
